# crud_actix

./: .env-example  Cargo.toml  Dockerfile  Makefile  docker-compose.yml  readme.md
src/: main.rs
src/app/: mod.rs
src/app/interfaces/: mod.rs  ticket_interface.rs
src/app/models/: mod.rs  ticket_model.rs  user_model.rs
src/app/schemas/: mod.rs  ticket_schema.rs  user_schema.rs
src/databases/: connection.rs
src/http/: mod.rs  routes.rs  utils.rs  view_model.rs
src/http/databases/: connection.rs
src/http/databases/migrations/: 20240211031248_tickets.down.sql  20240211031248_tickets.up.sql  20240211031257_users.up.sql
src/http/handlers/: mod.rs  ticket_handler.rs  user_handler.rs
